# Agent-Tool-Hub-

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  readme.MD
.github/workflows/: ci.yml
tests/: test_agent_talk.py  test_converter.py  test_email_sender.py  test_scheduler.py  test_scraper.py  test_search.py  test_weather.py
tools/_template/: README.md
tools/email-sender/: .env.example  Dockerfile  README.md  email_sender.py  tool.json
tools/file-converter/: .env.example  AGENTS.md  Dockerfile  README.md  convert.py  requirements.txt  tool.json
tools/perplexity-search/: .env.example  AGENTS.md  Dockerfile  README.md  search.py  tool.json
tools/scheduler/: Dockerfile  README.md  scheduler.py  tool.json
tools/talk-to-agent/: .env.example  AGENTS.md  Dockerfile  README.md  adapter.py  agent_talk.py  registry.json  requirements.txt  tool.json
tools/weather-api/: .env.example  AGENTS.md  Dockerfile  README.md  tool.json  weather.py
tools/web-scraper/: Dockerfile  README.md  scraper.py  tool.json
