[project]
name = "agent-tools-hub"
version = "0.1.0"
description = "A community-driven collection of standalone, reusable HTTP tools for AI agents"
requires-python = ">=3.10"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
